--- a/web/src/test/resources/test-persistence.properties
+++ b/web/src/test/resources/test-persistence.properties
@@ -1,5 +1,5 @@
 database.driverClassName=org.hsqldb.jdbcDriver
-database.url=jdbc:hsqldb:file:../db/it-interview;shutdown=true;sql.syntax_pgs=true
+database.url=jdbc:hsqldb:mem:interview-it
 database.hibernate.dialect=org.hibernate.dialect.HSQLDialect
 database.userName=sa
 database.password=
